2007-02-14  Dalibor Topic  <robilad@kaffe.org>

	* shift.c (shift_down): Changed off to off_t.

2007-02-14  Dalibor Topic  <robilad@kaffe.org>

	* shift.c (shift_up, shift_down): Changed len to size_t.
	Use new variable num_read to count read bytes.

2007-02-14  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac, README, NEWS: Bump version number to 0.96-pre.
	* Makefile.am (splint): Use libfastjar_convenience_la_SOURCES.
        * configure, Makefile.in: Regenerated.

2007-02-13  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac, README, NEWS: Bump version number to 0.95.
	* configure: Regenerated.

2007-02-13  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am: Build the fastjar library as a convenience library.
	* Makefile.in: Regenerate.

2007-02-12  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (get_next_arg, add_to_jar_with_dir): Use
	EXIT_FAILURE.

2007-02-12  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (EXTRA_DIST): Removed fastjar.texi.
	* Makefile.in: Regenerated.

2007-02-12  Alfred M. Szmidt  <ams@gnu.org>

	* jartool.c (MAXPATHLEN) [!MAXPATHLEN]: Removed macro.
	(get_next_arg): Allocate memory dynamiclly for S.
	(add_to_jar_with_dir): Allocate memory dynamiclly for OLD_DIR.

2007-02-12  Matthias Klose  <doko@ubuntu.com>

	* fastjar.texi: Set version to 0.95.

2007-02-12  Matthias Klose  <doko@ubuntu.com>

	* fdl.texi, COPYING.DOC: Remove, all documentation is licensed
	under the GPL.
	* fastjar.texi: Don't include fdl.texi.
	* AUTHORS: Add myself as documentation author.

2007-02-09  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Updated.

2007-02-09  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (pscan, flawfinder, rats, splint): Added new targets
	which invoke source code scanners.

	* configure.ac (AC_CHECK_PATH): Check for pscan, flawfinder, rats and
	splint.

	* Makefile.in, lib/Makefile.in, configure: Regenerated.

2007-02-08  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_MSG_ERROR): Stop configure if neither ftruncate 