@@ -1,5 +1,16 @@
 2007-02-14  Dalibor Topic  <robilad@kaffe.org>
 
+	* jartool.c (extract_jar): Changed rdamt to size_t.
+	* pushback.c (pb_push): Changed in_amt, wrap to size_t.
+	Added a size_t cast, and removed an int cast. 
+	(pb_read) Changed out_amt, wrap, tmp to size_t.
+	Added a size_t cast, and removed an int cast.
+	Added new variable num_read.
+	* pushback.h (pb_push, pb_read): Changed prototypes
+	to use size_t.
+
+2007-02-14  Dalibor Topic  <robilad@kaffe.org>
+
 	* shift.c (shift_down): Changed off to off_t.
 
 2007-02-14  Dalibor Topic  <robilad@kaffe.org>
